Regression: Crash in Solidify modifier when adjusting Bevel Convex slider #101118

Closed
opened 2022-09-16 11:32:19 +02:00 by Jaggz H · 8 comments

Debian (stable) Linux build from a few days ago:
Broken: 3.4.0 Alpha, branch: master, commit date: 2022-09-10 23:06, hash: 1f4dc51d09, type: Release
Working: 3.3 LTS.

Caused by 291c313f80

Crash when adjusting Bevel Convex slider

Reproduce:

  1. Load attached .blend
  2. Slide Bevel Convex value in Mod Solidify

What happens:
Segfault

Expected behavior:
I should be embarrassed when I find the problem was that my computer's not plugged in.

solidify-crash.blend

Debian (stable) Linux build from a few days ago: Broken: 3.4.0 Alpha, branch: master, commit date: 2022-09-10 23:06, hash: 1f4dc51d09af, type: Release Working: 3.3 LTS. Caused by 291c313f80 Crash when adjusting Bevel Convex slider Reproduce: 1. Load attached .blend 2. Slide Bevel Convex value in Mod Solidify What happens: Segfault Expected behavior: I should be embarrassed when I find the problem was that my computer's not plugged in. [solidify-crash.blend](https://archive.blender.org/developer/F13498883/solidify-crash.blend)
Author

Added subscriber: @jaggz

Added subscriber: @jaggz
Member

Added subscriber: @OmarEmaraDev

Added subscriber: @OmarEmaraDev
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member
* thread #23, name = 'blender', stop reason = signal SIGSEGV: invalid address (fault address: 0x0)
    frame #0: 0x00000000010c9421 blender`MOD_solidify_nonmanifold_modifyMesh(md=0x00007fffd0001018, ctx=0x00007fffed7b5358, mesh=0x00007fffd00026b8) at MOD_solidify_nonmanifold.c:2047:45
   2044             medge[insert].flag = orig_medge[(*l)->old_edge].flag | ME_EDGEDRAW | ME_EDGERENDER;
   2045             medge[insert].crease = orig_medge[(*l)->old_edge].crease;
   2046             if (result_edge_bweight) {
-> 2047               result_edge_bweight[insert] = orig_edge_bweight[(*l)->old_edge];
   2048             }
   2049             if (bevel_convex != 0.0f && (*l)->faces[1] != NULL) {
   2050               result_edge_bweight[insert] = clamp_f(
(lldb) bt
* thread #23, name = 'blender', stop reason = signal SIGSEGV: invalid address (fault address: 0x0)
  * frame #0: 0x00000000010c9421 blender`MOD_solidify_nonmanifold_modifyMesh(md=0x00007fffd0001018, ctx=0x00007fffed7b5358, mesh=0x00007fffd00026b8) at MOD_solidify_nonmanifold.c:2047:45
    frame #1: 0x00000000010b9ba3 blender`modifyMesh(md=0x00007fffd0001018, ctx=0x00007fffed7b5358, mesh=0x00007fffd00026b8) at MOD_solidify.c:74:14
    frame #2: 0x00000000007ec1cd blender`BKE_modifier_modify_mesh(md=0x00007fffd0001018, ctx=0x00007fffed7b5358, me=0x00007fffd00026b8) at modifier.c:1006:10
    frame #3: 0x00000000002679a3 blender`modifier_modify_mesh_and_geometry_set(md=0x00007fffd0001018, mectx=0x00007fffed7b5358, input_mesh=0x00007fffd00026b8, geometry_set=0x00007fffed7b5748) at DerivedMesh.cc:613:19
    frame #4: 0x0000000000265031 blender`mesh_calc_modifiers(depsgraph=0x000000001b94e2f8, scene=0x000000001b45c938, ob=0x000000001b469ea8, use_deform=true, need_mapping=false, dataMask=0x00007fffed7b5858, use_cache=true, allow_shared_mesh=true, r_deform=0x00007fffed7b5808, r_final=0x00007fffed7b5810, r_geometry_set=0x00007fffed7b5800) at DerivedMesh.cc:974:25
    frame #5: 0x0000000000263818 blender`mesh_build_data(depsgraph=0x000000001b94e2f8, scene=0x000000001b45c938, ob=0x000000001b469ea8, dataMask=0x00007fffed7b5858, need_mapping=false) at DerivedMesh.cc:1569:3
    frame #6: 0x0000000000263420 blender`::makeDerivedMesh(depsgraph=0x000000001b94e2f8, scene=0x000000001b45c938, ob=0x000000001b469ea8, dataMask=0x00007fffed7b58e0) at DerivedMesh.cc:1744:5
    frame #7: 0x000000000088e637 blender`BKE_object_handle_data_update(depsgraph=0x000000001b94e2f8, scene=0x000000001b45c938, ob=0x000000001b469ea8) at object_update.c:163:7
    frame #8: 0x000000000088ed88 blender`BKE_object_eval_uber_data(depsgraph=0x000000001b94e2f8, scene=0x000000001b45c938, ob=0x000000001b469ea8) at object_update.c:326:3
    frame #9: 0x0000000000df9184 blender`blender::deg::DepsgraphNodeBuilder::build_object_data_geometry(this=0x000000001b8911f8, depsgraph=0x000000001b94e2f8)::$_21::operator()(Depsgraph*) const at deg_builder_nodes.cc:1508:34
    frame #10: 0x0000000000df9142 blender`void std::__invoke_impl<void, blender::deg::DepsgraphNodeBuilder::build_object_data_geometry(Object*)::$_21&, Depsgraph*>((null)=__invoke_other @ 0x00007fffed7b5988, __f=0x000000001b8911f8, __args=0x00007fffed7b5a20)::$_21&, Depsgraph*&&) at invoke.h:61:14
    frame #11: 0x0000000000df90d2 blender`std::enable_if<is_invocable_r_v<void, blender::deg::DepsgraphNodeBuilder::build_object_data_geometry(Object*)::$_21&, Depsgraph*>, void>::type std::__invoke_r<void, blender::deg::DepsgraphNodeBuilder::build_object_data_geometry(__fn=0x000000001b8911f8, __args=0x00007fffed7b5a20)::$_21&, Depsgraph*>(blender::deg::DepsgraphNodeBuilder::build_object_data_geometry(Object*)::$_21&, Depsgraph*&&) at invoke.h:111:2
    frame #12: 0x0000000000df8fb2 blender`std::_Function_handler<void (Depsgraph*), blender::deg::DepsgraphNodeBuilder::build_object_data_geometry(Object*)::$_21>::_M_invoke(__functor=0x000000001b8911f8, __args=0x00007fffed7b5a20) at std_function.h:290:9
    frame #13: 0x0000000000e3eebe blender`std::function<void (Depsgraph*)>::operator(this=0x000000001b8911f8, __args=0x000000001b94e2f8)(Depsgraph*) const at std_function.h:591:9
    frame #14: 0x0000000000e3ea53 blender`blender::deg::(anonymous namespace)::evaluate_node(state=0x00007fffffffe4f0, operation_node=0x000000001b891148)::DepsgraphEvalState const*, blender::deg::OperationNode*) at deg_eval.cc:107:5
    frame #15: 0x0000000000e3e95a blender`blender::deg::(anonymous namespace)::deg_task_run_func(pool=0x000000001cb2ae68, taskdata=0x000000001b891148) at deg_eval.cc:125:3
    frame #16: 0x000000000eefebed blender`Task::operator(this=0x00007fffd0001248)() const at task_pool.cc:164:3
    frame #17: 0x000000000eeffb19 blender`tbb::internal::function_task<Task>::execute(this=0x00007fffd0001240) at task.h:1059:13
    frame #18: 0x0000000000a90d45 blender`tbb::internal::custom_scheduler<tbb::internal::IntelSchedulerTraits>::process_bypass_loop(tbb::internal::context_guard_helper<false>&, tbb::task*, long) + 533
    frame #19: 0x0000000000a90ffb blender`tbb::internal::custom_scheduler<tbb::internal::IntelSchedulerTraits>::local_wait_for_all(tbb::task&, tbb::task*) + 235
    frame #20: 0x0000000000a7cc67 blender`tbb::internal::arena::process(tbb::internal::generic_scheduler&) + 391
    frame #21: 0x0000000000a89ad0 blender`tbb::internal::market::process(rml::job&) + 32
    frame #22: 0x0000000000a8bd9c blender`tbb::internal::rml::private_worker::run() + 76
    frame #23: 0x0000000000a8bf99 blender`tbb::internal::rml::private_worker::thread_routine(void*) + 9
    frame #24: 0x00007ffff7e3f78d libc.so.6`___lldb_unnamed_symbol3500 + 717
    frame #25: 0x00007ffff7ec08e4 libc.so.6`__clone + 68
``` * thread #23, name = 'blender', stop reason = signal SIGSEGV: invalid address (fault address: 0x0) frame #0: 0x00000000010c9421 blender`MOD_solidify_nonmanifold_modifyMesh(md=0x00007fffd0001018, ctx=0x00007fffed7b5358, mesh=0x00007fffd00026b8) at MOD_solidify_nonmanifold.c:2047:45 2044 medge[insert].flag = orig_medge[(*l)->old_edge].flag | ME_EDGEDRAW | ME_EDGERENDER; 2045 medge[insert].crease = orig_medge[(*l)->old_edge].crease; 2046 if (result_edge_bweight) { -> 2047 result_edge_bweight[insert] = orig_edge_bweight[(*l)->old_edge]; 2048 } 2049 if (bevel_convex != 0.0f && (*l)->faces[1] != NULL) { 2050 result_edge_bweight[insert] = clamp_f( (lldb) bt * thread #23, name = 'blender', stop reason = signal SIGSEGV: invalid address (fault address: 0x0) * frame #0: 0x00000000010c9421 blender`MOD_solidify_nonmanifold_modifyMesh(md=0x00007fffd0001018, ctx=0x00007fffed7b5358, mesh=0x00007fffd00026b8) at MOD_solidify_nonmanifold.c:2047:45 frame #1: 0x00000000010b9ba3 blender`modifyMesh(md=0x00007fffd0001018, ctx=0x00007fffed7b5358, mesh=0x00007fffd00026b8) at MOD_solidify.c:74:14 frame #2: 0x00000000007ec1cd blender`BKE_modifier_modify_mesh(md=0x00007fffd0001018, ctx=0x00007fffed7b5358, me=0x00007fffd00026b8) at modifier.c:1006:10 frame #3: 0x00000000002679a3 blender`modifier_modify_mesh_and_geometry_set(md=0x00007fffd0001018, mectx=0x00007fffed7b5358, input_mesh=0x00007fffd00026b8, geometry_set=0x00007fffed7b5748) at DerivedMesh.cc:613:19 frame #4: 0x0000000000265031 blender`mesh_calc_modifiers(depsgraph=0x000000001b94e2f8, scene=0x000000001b45c938, ob=0x000000001b469ea8, use_deform=true, need_mapping=false, dataMask=0x00007fffed7b5858, use_cache=true, allow_shared_mesh=true, r_deform=0x00007fffed7b5808, r_final=0x00007fffed7b5810, r_geometry_set=0x00007fffed7b5800) at DerivedMesh.cc:974:25 frame #5: 0x0000000000263818 blender`mesh_build_data(depsgraph=0x000000001b94e2f8, scene=0x000000001b45c938, ob=0x000000001b469ea8, dataMask=0x00007fffed7b5858, need_mapping=false) at DerivedMesh.cc:1569:3 frame #6: 0x0000000000263420 blender`::makeDerivedMesh(depsgraph=0x000000001b94e2f8, scene=0x000000001b45c938, ob=0x000000001b469ea8, dataMask=0x00007fffed7b58e0) at DerivedMesh.cc:1744:5 frame #7: 0x000000000088e637 blender`BKE_object_handle_data_update(depsgraph=0x000000001b94e2f8, scene=0x000000001b45c938, ob=0x000000001b469ea8) at object_update.c:163:7 frame #8: 0x000000000088ed88 blender`BKE_object_eval_uber_data(depsgraph=0x000000001b94e2f8, scene=0x000000001b45c938, ob=0x000000001b469ea8) at object_update.c:326:3 frame #9: 0x0000000000df9184 blender`blender::deg::DepsgraphNodeBuilder::build_object_data_geometry(this=0x000000001b8911f8, depsgraph=0x000000001b94e2f8)::$_21::operator()(Depsgraph*) const at deg_builder_nodes.cc:1508:34 frame #10: 0x0000000000df9142 blender`void std::__invoke_impl<void, blender::deg::DepsgraphNodeBuilder::build_object_data_geometry(Object*)::$_21&, Depsgraph*>((null)=__invoke_other @ 0x00007fffed7b5988, __f=0x000000001b8911f8, __args=0x00007fffed7b5a20)::$_21&, Depsgraph*&&) at invoke.h:61:14 frame #11: 0x0000000000df90d2 blender`std::enable_if<is_invocable_r_v<void, blender::deg::DepsgraphNodeBuilder::build_object_data_geometry(Object*)::$_21&, Depsgraph*>, void>::type std::__invoke_r<void, blender::deg::DepsgraphNodeBuilder::build_object_data_geometry(__fn=0x000000001b8911f8, __args=0x00007fffed7b5a20)::$_21&, Depsgraph*>(blender::deg::DepsgraphNodeBuilder::build_object_data_geometry(Object*)::$_21&, Depsgraph*&&) at invoke.h:111:2 frame #12: 0x0000000000df8fb2 blender`std::_Function_handler<void (Depsgraph*), blender::deg::DepsgraphNodeBuilder::build_object_data_geometry(Object*)::$_21>::_M_invoke(__functor=0x000000001b8911f8, __args=0x00007fffed7b5a20) at std_function.h:290:9 frame #13: 0x0000000000e3eebe blender`std::function<void (Depsgraph*)>::operator(this=0x000000001b8911f8, __args=0x000000001b94e2f8)(Depsgraph*) const at std_function.h:591:9 frame #14: 0x0000000000e3ea53 blender`blender::deg::(anonymous namespace)::evaluate_node(state=0x00007fffffffe4f0, operation_node=0x000000001b891148)::DepsgraphEvalState const*, blender::deg::OperationNode*) at deg_eval.cc:107:5 frame #15: 0x0000000000e3e95a blender`blender::deg::(anonymous namespace)::deg_task_run_func(pool=0x000000001cb2ae68, taskdata=0x000000001b891148) at deg_eval.cc:125:3 frame #16: 0x000000000eefebed blender`Task::operator(this=0x00007fffd0001248)() const at task_pool.cc:164:3 frame #17: 0x000000000eeffb19 blender`tbb::internal::function_task<Task>::execute(this=0x00007fffd0001240) at task.h:1059:13 frame #18: 0x0000000000a90d45 blender`tbb::internal::custom_scheduler<tbb::internal::IntelSchedulerTraits>::process_bypass_loop(tbb::internal::context_guard_helper<false>&, tbb::task*, long) + 533 frame #19: 0x0000000000a90ffb blender`tbb::internal::custom_scheduler<tbb::internal::IntelSchedulerTraits>::local_wait_for_all(tbb::task&, tbb::task*) + 235 frame #20: 0x0000000000a7cc67 blender`tbb::internal::arena::process(tbb::internal::generic_scheduler&) + 391 frame #21: 0x0000000000a89ad0 blender`tbb::internal::market::process(rml::job&) + 32 frame #22: 0x0000000000a8bd9c blender`tbb::internal::rml::private_worker::run() + 76 frame #23: 0x0000000000a8bf99 blender`tbb::internal::rml::private_worker::thread_routine(void*) + 9 frame #24: 0x00007ffff7e3f78d libc.so.6`___lldb_unnamed_symbol3500 + 717 frame #25: 0x00007ffff7ec08e4 libc.so.6`__clone + 68 ```
Omar Emara changed title from Crash in Mod Solidify (complex) to Crash in Solidify modifier when adjusting Bevel Convex slider 2022-09-16 11:40:42 +02:00
Member

Added subscribers: @HooglyBoogly, @lichtwerk

Added subscribers: @HooglyBoogly, @lichtwerk
Member

Caused by 291c313f80
CC @HooglyBoogly

Caused by 291c313f80 CC @HooglyBoogly
Philipp Oeser changed title from Crash in Solidify modifier when adjusting Bevel Convex slider to Regression: Crash in Solidify modifier when adjusting Bevel Convex slider 2022-09-16 15:15:42 +02:00
Hans Goudey self-assigned this 2022-09-27 16:47:42 +02:00

This issue was referenced by 3059c0998a

This issue was referenced by 3059c0998a3db3e123a6894f7862fce3084001cd
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#101118
No description provided.