Fix T101118, T101471: Crash with bevel weight in solidify modifier

Just a missing null check for the original edge weight.